removed empty dir

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </div>
         </div>
       </div>
-      <form action="">
+      <form action="" class="feed-back">
         <fieldset>
           <legend>Узнайте <span>стоимость сборки</span></legend>
           <input type="text" placeholder="Ваше имя">
@@ -81,6 +81,9 @@
           <button class="btn btn--orange" type="submit">отправить заявку</button>
         </fieldset>
       </form>
+    </section>
+    <section class="services">
+      <h2 class="section-header">Наши услуги</h2>
     </section>
   </main>
 </body>
