--- a/Modern-Circular-jQuery-Countdown-Timer-Plugin-Final-Countdown/demo/index.html
+++ b/Modern-Circular-jQuery-Countdown-Timer-Plugin-Final-Countdown/demo/index.html
@@ -85,20 +85,20 @@ end: '1388461320',
 now: '1387461319',
 
 seconds: {
-    borderColor: 'blue',
-    borderWidth: '2'
+    borderColor: '#01a5e6',
+    borderWidth: '4'
 },
 minutes: {
-    borderColor: '#ACC742',
-    borderWidth: '6'
+    borderColor: '#01a5e6',
+    borderWidth: '4'
 },
 hours: {
-    borderColor: '#ECEFCB',
-    borderWidth: '6'
+    borderColor: '#01a5e6',
+    borderWidth: '4'
 },
 days: {
-    borderColor: '#FF9900',
-    borderWidth: '6'
+    borderColor: '#01a5e6',
+    borderWidth: '4'
 }}, function() {
 // Finish callback
 });
